# cosmosdb-adbc

./: .gitattributes  .gitignore  Cargo.toml  DESIGN.md
crates/adbc-cosmos/: Cargo.toml
crates/adbc-cosmos/src/: batch_reader.rs  client.rs  connection.rs  database.rs  driver.rs  error.rs  inference.rs  lib.rs  metadata.rs  options.rs  output.rs  runtime.rs  statement.rs
crates/adbc-cosmos/tests/: live_driver.rs  smoke.rs
crates/cosmos-client/: Cargo.toml
crates/cosmos-client/examples/: seed.rs  spike_a.rs
crates/cosmos-client/src/: lib.rs
crates/cosmos-client/tests/: live_emulator.rs
crates/cosmos-datafusion/: Cargo.toml
crates/cosmos-datafusion/src/: catalog.rs  convert.rs  lib.rs  normalize.rs  predicate.rs  provider.rs  pushdown.rs
validation/: README.md  roundtrip.py
