[package]
name = "cosmos-client"
description = "Neutral Cosmos DB transport: auth + engine-driven cross-partition query, returning raw JSON. No Arrow/DataFusion/ADBC types leak here."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Pinned to 0.29.0: the last SDK version exposing the `preview_query_engine` seam
# (main/0.37 removed it). key_auth enables CosmosClient::with_key.
azure_data_cosmos = { version = "=0.29.0", features = ["preview_query_engine", "key_auth"] }
azure_core = "0.30"
azure_identity = "0.30"
# Experimental cross-partition query engine; not published to crates.io — pinned by rev.
# Its default `query_engine` feature turns on azure_data_cosmos/preview_query_engine.
azure_data_cosmos_engine = { git = "https://github.com/Azure/azure-cosmos-client-engine.git", rev = "f6ffa462ec10e1a514816068a6266833cd2a8d88" }
serde_json = { version = "1", features = ["raw_value"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
